fix: Fixed some bugs and improved POST api/v1/verify
It is finished.
