# api/oas-doc.yaml
@@ -127,14 +127,6 @@ paths:
       x-swagger-router-controller: AuthController
       description: Verifies the user phone number
       operationId: postVerify
-      requestBody:
-        x-name: phoneNumber
-        description: User phone number
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/phoneNumber'
       responses:
         '201':
           description: Success
@@ -154,51 +146,53 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorModel'
-    # put:
-    #   tags:
-    #     - Verification
-    #   x-swagger-router-controller: AuthController
-    #   description: Verifies the user phone number
-    #   operationId: verify
-    #   requestBody:
-    #     x-name: phoneNumber
-    #     description: User phone number
-    #     required: true
-    #     content:
-    #       application/json:
-    #         schema:
-    #           $ref: '#/components/schemas/phoneNumber'
-    #   responses:
-    #     '201':
-    #       description: Success
-    #       content:
-    #         application/json:
-    #           schema:
-    #            $ref: '#/components/schemas/errorModel'
-    #     '400':
-    #       description: Bad Request
-    #       content:
-    #         application/json:
-    #           schema:
-    #             $ref: '#/components/schemas/errorModel'
-    #     '401':
-    #       description: Unauthorized
-    #       content:
-    #         application/json:
-    #           schema:
-    #             $ref: '#/components/schemas/errorModel'
-    #     '403':
-    #       description: Forbidden
-    #       content:
-    #         application/json:
-    #           schema:
-    #             $ref: '#/components/schemas/errorModel'
-    #     '500':
-    #       description: Internal Server Error
-    #       content:
-    #         application/json:
-    #           schema:
-    #             $ref: '#/components/schemas/errorModel'
+    put:
+      security:
+        - cookieAuth: []
+      tags:
+        - Verification
+      x-swagger-router-controller: AuthController
+      description: Verifies the user phone number
+      operationId: putVerify
+      requestBody:
+        x-name: phoneNumber
+        description: User phone number
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/phoneAndCode'
+      responses:
+        '201':
+          description: Success
+          content:
+            application/json:
+              schema:
+               $ref: '#/components/schemas/errorModel'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
 
 components:
   schemas:
@@ -230,12 +224,14 @@ components:
           type: string
         password:
           type: string
-    phoneNumber:
+    phoneAndCode:
       type: object
       required:
         - phoneNumber
+        - code
       properties:
         phoneNumber:
           type: string
-
+        code:
+          type: string
 
